--- a/docs/lib/sage_rails/app/views/sage_components/_sage_badge.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_badge.html.erb
@@ -23,10 +23,11 @@
     <span class="sage-badge__value-text">
       <%= component.value.html_safe %>
     </span>
+    <%= component.content %>
+    <% if component.interactive_type %>
+      <!-- <span class="sage-badge__decor-icon sage-badge__decor-icon--down-small"></span> -->
+      <pds-icon name="down-small" size="12px" class="sage-badge__decor-icon sage-badge__decor-icon--down-small"></pds-icon>
+    <% end %>
   </<%= badge_content_tag %>>
-  <%= component.content %>
-  <% if component.interactive_type %>
-    <span class="sage-badge__decor-icon sage-badge__decor-icon--down-small"></span>
-  <% end %>
 </span>
 
