--- a/docs/app/views/application/_nav.html.erb
+++ b/docs/app/views/application/_nav.html.erb
@@ -9,7 +9,7 @@
       subtle: true,
       icon: {
         style: "left",
-        name: "home"
+        name: "home-alt"
       },
     } %>
     <%= sage_component SageButton, {
@@ -48,7 +48,7 @@
         name: "stack"
       },
     } %>
-    <!-- COMING SOON 
+    <!-- COMING SOON
     <%= sage_component SageButton, {
       value: "Interactions",
       attributes: {
