--- a/docs/app/views/examples/components/feature_toggle/_preview.html.erb
+++ b/docs/app/views/examples/components/feature_toggle/_preview.html.erb
@@ -39,7 +39,7 @@
     description: "New navigation bar layout that places Offers, Coupons, and Affiliates under a brand new “Sales” tab.",
     icon: {
       color: "published",
-      icon: "tag",
+      icon: "customize",
       label: "New Sales Tab"
     },
     links: [
