--- a/docs/app/views/examples/components/icon_list/_preview.html.erb
+++ b/docs/app/views/examples/components/icon_list/_preview.html.erb
@@ -3,7 +3,7 @@
   items: [
     {
       bullet: %(
-        <i class="sage-icon-circle-1 t-sage--color-charcoal-300"></i>
+        <pds-icon name="circle-1" class="t-sage--color-charcoal-300""></pds-icon>
       ),
       body: %(
         <h4 class="sage-icon-list-item__title">Lorem ipsum dolor sit amet</h4>
@@ -12,7 +12,7 @@
     },
     {
       bullet: %(
-        <i class="sage-icon-circle-2 t-sage--color-charcoal-300"></i>
+        <pds-icon name="circle-2" class="t-sage--color-charcoal-300""></pds-icon>
       ),
       body: %(
         <h4 class="sage-icon-list-item__title">Lorem ipsum dolor sit amet</h4>
@@ -21,7 +21,7 @@
     },
     {
       bullet: %(
-        <i class="sage-icon-circle-3 t-sage--color-charcoal-300"></i>
+        <pds-icon name="circle-3" class="t-sage--color-charcoal-300""></pds-icon>
       ),
       body: %(
         <h4 class="sage-icon-list-item__title">Lorem ipsum dolor sit amet</h4>
