--- a/packages/sage-assets/lib/stylesheets/components/_form_input.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_input.scss
@@ -170,4 +170,6 @@ $-input-text-height: sage-font-size(body);
 
 .sage-input__message {
   @include sage-form-field-message;
+  display: flex;
+  align-items: center;
 }
