fix(formsection): correct missing icons

--- a/docs/app/views/examples/components/form_section/_preview.html.erb
+++ b/docs/app/views/examples/components/form_section/_preview.html.erb
@@ -2,7 +2,7 @@
 
   <!-- Default -->
   <h3 class="t-sage-heading-6">Default</h3>
-  <%= sage_component SageFormSection, { 
+  <%= sage_component SageFormSection, {
     id:"c1",
     title: "Form Section Title",
     subtitle: "Helpful text that lets the customer have an idea how to work with the section.",
@@ -10,13 +10,13 @@
     <%= sage_component SageAlert, {
       title: "Form Section Content Will Go Here",
       desc: "This component is designed to be very flexible and take any sort of content you want to pass to it.",
-      icon_name: "sage-icon-info-circle",
+      icon_name: "info-circle",
     } %>
   <% end %>
 
   <!-- Custom title_tag -->
   <h3 class="t-sage-heading-6">Form Section with custom header tag</h3>
-  <%= sage_component SageFormSection, { 
+  <%= sage_component SageFormSection, {
     id:"c2",
     title: "Custom Title Tag",
     subtitle: "Helpful text that lets the customer have an idea how to work with the section.",
@@ -25,19 +25,19 @@
     <%= sage_component SageAlert, {
       title: "Form Section Content Will Go Here",
       desc: "This component is designed to be very flexible and take any sort of content you want to pass to it.",
-      icon_name: "sage-icon-info-circle",
+      icon_name: "info-circle",
     } %>
   <% end %>
 
   <h3 class="t-sage-heading-6">With Custom Subtitle</h3>
-  <%= sage_component SageFormSection, { 
+  <%= sage_component SageFormSection, {
     id:"c1",
     title: "Form Section Title",
   } do %>
     <%= sage_component SageAlert, {
       title: "Form Section Content Will Go Here",
       desc: "This component is designed to be very flexible and take any sort of content you want to pass to it.",
-      icon_name: "sage-icon-info-circle",
+      icon_name: "info-circle",
     } %>
     <%= content_for :sage_form_section_subtitle do %>
       <p>Helpful text that lets the customer have an idea how to work with the section.</p>
