--- a/packages/sage-assets/lib/stylesheets/components/_form_textarea.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_textarea.scss
@@ -55,4 +55,6 @@ $-textarea-color-default: sage-color(charcoal, 300);
 
 .sage-textarea__message {
   @include sage-form-field-message;
+  display: flex;
+  align-items: center;
 }
