feat(dropdownitem): convert rails icon to pine

--- a/docs/lib/sage_rails/app/views/sage_components/_sage_dropdown_item.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_dropdown_item.html.erb
@@ -37,6 +37,9 @@ end
         <%= key %>="<%= value %>"
       <% end if component.attributes&.is_a?(Hash) %>
     >
+      <% if component.icon.present? %>
+        <pds-icon class="<%= "sage-dropdown__item-control--icon-#{component.icon}"%> <%= SageClassnames::SPACERS::XS_RIGHT %>" name="<%= component.icon %>"></pds-icon>
+      <% end %>
       <% if component.content.present? %>
         <%= component.content %>
       <% else %>
