--- a/packages/sage-assets/lib/stylesheets/components/_search.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_search.scss
@@ -18,7 +18,7 @@ $-search-icon: "::before";
   background-color: sage-color(white);
 
   &#{$-search-icon} {
-    @include sage-icon-base(search-small);
+    @include sage-icon-base(search-small, sm, pine);
 
     z-index: sage-z-index(default, 2);
     margin-left: sage-spacing(sm);
@@ -141,7 +141,7 @@ $-search-icon: "::before";
   position: relative;
   z-index: 1;
   flex: 1;
-  padding: rem(6px) sage-spacing(sm) rem(6px) rem(40px);
+  padding: rem(6px) sage-spacing(sm) rem(6px) sage-spacing(xs);
   border: 0;
   border-radius: 0;
   box-shadow: none;
