feat(statusicon): convert rails icon to pine

--- a/docs/lib/sage_rails/app/views/sage_components/_sage_status_icon.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_status_icon.html.erb
@@ -8,6 +8,7 @@
   tabindex=0
   <%= component.generated_html_attributes.html_safe %>
 >
+  <pds-icon name="<%= component.icon %>"></pds-icon>
   <span class="visually-hidden">
     <%= component.value %>
   </span>
