--- a/packages/sage-assets/lib/stylesheets/components/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_icon.scss
@@ -123,7 +123,7 @@ $-icon-beside-type: (
 
   .sage-status-icon--#{$icon-name} {
     &::before {
-      @include sage-icon-base($icon-name);
+      @include sage-icon-base($icon-name, md, pine);
     }
   }
 }
