--- a/packages/sage-assets/lib/stylesheets/components/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_icon.scss
@@ -93,7 +93,7 @@ $-icon-beside-type: (
   }
 
   .sage-label--icon-#{$icon-name} .sage-label__value::before {
-    @include sage-icon-base($icon-name, md);
+    @include sage-icon-base($icon-name, md, pine);
     align-self: center;
     position: relative;
     margin: 0 sage-spacing(xs) 0 0;
