fix(tabs): correct icon name typo

--- a/docs/app/views/examples/components/tabs/_preview.html.erb
+++ b/docs/app/views/examples/components/tabs/_preview.html.erb
@@ -56,7 +56,7 @@
           attributes: {
             href: "//example.com/basic-test2"
           },
-          icon: "filters"
+          icon: "filter"
         },
       ]
     }
