fix(catalogitem): fix missing icon

--- a/docs/app/views/examples/components/catalog_item/_preview.html.erb
+++ b/docs/app/views/examples/components/catalog_item/_preview.html.erb
@@ -75,7 +75,7 @@
   <% 2.times do %>
     <%= sage_component SageCatalogItem, {
       title: "Fun For All – The Children Call: Their Favorite Time Of Year",
-      icon: "sage-icon-mail-xl",
+      icon: "mail",
       href: "#"
     } do %>
       <%= sage_component SageButton, {
