--- a/docs/lib/sage_rails/app/views/sage_components/_sage_catalog_item.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_catalog_item.html.erb
@@ -42,7 +42,7 @@
   <% end %>
   <% if component.icon.present? %>
     <div class="sage-catalog-item__icon">
-      <i class="<%= component.icon %>" aria-hidden="true"></i>
+      <pds-icon name="<%= component.icon %>" class="<%= component.icon %>" size="24px"></pds-icon>
     </div>
   <% end %>
 </li>
