fix(docs): correct home icon

--- a/docs/app/views/application/_nav.html.erb
+++ b/docs/app/views/application/_nav.html.erb
@@ -9,7 +9,7 @@
       subtle: true,
       icon: {
         style: "left",
-        name: "home-alt"
+        name: "home"
       },
     } %>
     <%= sage_component SageButton, {
