fix: update icon-base to include pine

--- a/packages/sage-assets/lib/stylesheets/components/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_icon.scss
@@ -117,7 +117,7 @@ $-icon-beside-type: (
     &::before {
       margin-right: sage-spacing(xs);
 
-      @include sage-icon-base($icon-name);
+      @include sage-icon-base($icon-name, md, pine);
     }
   }
 
