--- a/packages/sage-assets/lib/stylesheets/components/_tab.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_tab.scss
@@ -116,7 +116,7 @@ $-tab-color-disabled: map-get($sage-tab-colors, disabled);
         order: 2;
         color: sage-color(charcoal, 100);
 
-        @include sage-icon-base(right-small, xl);
+        @include sage-icon-base(right-small, xl, pine);
       }
     }
   }
