--- a/docs/app/views/examples/components/choice/_preview.html.erb
+++ b/docs/app/views/examples/components/choice/_preview.html.erb
@@ -49,7 +49,8 @@ long_description = "Description with longer text to cause wrapping and make the 
     target: "example",
     text: "Option 1",
     type: "icon",
-    icon: "video-on"
+    icon: "video-on",
+    subtext: "Description of Option 1",
   }
 %>
 
