--- a/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
@@ -76,11 +76,20 @@ $-copy-text-color-hover: sage-color(charcoal, 500);
   &:hover::before {
     color: $-copy-text-color-hover;
   }
+
+  pds-icon {
+    align-self: center;
+  }
 }
 
 .sage-copy-btn--fill-container {
   width: 100%;
   text-align: left;
+
+  .sage-btn__truncate-text {
+    width: 100%
+  }
+
 }
 
 .sage-copy-text--semibold,
