style: correct missing semicolon

--- a/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
@@ -87,9 +87,8 @@ $-copy-text-color-hover: sage-color(charcoal, 500);
   text-align: left;
 
   .sage-btn__truncate-text {
-    width: 100%
+    width: 100%;
   }
-
 }
 
 .sage-copy-text--semibold,
