--- a/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
+++ b/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
@@ -450,6 +450,8 @@
     box-shadow: sage-border-interactive(disabled);
     cursor: not-allowed;
     resize: none;
+    padding-left: calc(#{sage-spacing(xl)} - #{sage-spacing(xs)});
+    margin-left: calc(#{sage-spacing(lg)} * -1);
 
     @include placeholder {
       color: sage-color(charcoal, 200);
