docs(search): add disabled search preview

--- a/docs/app/views/examples/components/search/_preview.html.erb
+++ b/docs/app/views/examples/components/search/_preview.html.erb
@@ -24,3 +24,13 @@
   hide_label: true,
   label_text: "Search"
 } %>
+
+<h3 class="t-sage-heading-6">Disabled</h3>
+<%= sage_component SageSearch, {
+  id: "search-4",
+  placeholder: "Search Coupons",
+  value: nil,
+  contained: true,
+  label_text: "Search",
+  disabled: true,
+} %>
