--- a/packages/sage-assets/lib/stylesheets/components/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_icon.scss
@@ -133,8 +133,9 @@ $-icon-beside-type: (
 // various responsive type specs
 //
 @each $type-spec in $-icon-beside-type {
-  .sage-icon--adjacent-type-#{$type-spec} {
-    height: sage-line-height($type-spec);
+  .sage-icon--adjacent-type-#{$type-spec},
+  pds-icon {
+    height: sage-line-height($type-spec) !important;
 
     &::before {
       height: sage-line-height($type-spec);
