--- a/packages/sage-assets/lib/stylesheets/components/_search.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_search.scss
@@ -72,6 +72,7 @@ $-search-icon: "::before";
     .sage-toolbar__group & {
       border-radius: 0;
     }
+
   }
 
   .sage-panel-controls__toolbar & {
@@ -169,6 +170,10 @@ $-search-icon: "::before";
   .sage-search--contained & {
     &:hover:not(:disabled) {
       background-color: sage-color(white);
+    }
+    &:disabled {
+      padding-left: calc(#{sage-spacing(xl)} - #{sage-spacing(xs)});
+      margin-left: calc(#{sage-spacing(lg)} * -1);
     }
   }
 
