fix(button): correct type

--- a/docs/lib/sage_rails/app/views/sage_components/_sage_button.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_button.html.erb
@@ -55,7 +55,7 @@
     <% if component.disclosure %>
       <pds-icon
         name="caret-down"
-        class="<%= SageClassnames::SPACERS::XS_LEFT %>%>">
+        class="<%= SageClassnames::SPACERS::XS_LEFT %>">
       </pds-icon>
     <% end %>
   <% end %>
