feat(property): convert icons to pine

--- a/docs/lib/sage_rails/app/views/sage_components/_sage_property.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_property.html.erb
@@ -5,7 +5,7 @@
   "
   <%= component.generated_html_attributes.html_safe %>
 >
-  <i class="sage-property__icon sage-icon-<%= component.icon %>"></i>
+  <pds-icon name="<%= component.icon %>" class="sage-property__icon sage-icon-<%= component.icon %>"></pds-icon>
   <span class="sage-property__value">
     <%= component.value %>
   </span>
